--- a/styles.css
+++ b/styles.css
@@ -63,14 +63,12 @@ video {
 
 /* Section localisation */
 section {
-    margin-top: 40px;
-    font-size: 20px;
-}
-
-section p {
-    font-weight: bold;
-    font-size: 22px;
-    color: #4b5c6b;
+    margin-bottom: 25px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
+    
 }
 
 /* Responsive Design pour mobile */
