--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,25 @@ body {
     text-align: center;
     padding: 20px;
 }
+/* Enlever les puces de la liste */
+nav ul {
+    list-style-type: none; 
+    padding: 0;
+    text-align: center;
+}
+
+/* Pour aligner les éléments horizontalement*/
+nav ul li {
+    display: inline-block;
+    margin-right: 30px;
+    text-align: center;
+}
+
+/* Style pour les liens */
+nav ul li a {
+    text-decoration: none;  /* Enlève le souligné des liens */
+    color: rgb(35, 49, 99);     
+}
 
 h1 {
     font-size: 32px;
@@ -69,6 +88,94 @@ section {
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
     
+}
+
+/* Menu Button */
+#menuButton {
+    position: fixed;
+    left: 30px;
+    top: 10px;
+    background-color: #4A6FA5;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    width: 45px;
+    border: none;
+    outline: none;
+    transition: background-color 0.3s, color 0.3s, transform 0.2s;
+}
+
+#menuButton:hover {
+    background-color: #2C4A73;
+    color: #AEB4DD;
+}
+
+#menuButton:active {
+    transform: scale(0.95);
+}
+
+/* Sidebar */
+.sidebar {
+    position: fixed;
+    left: -150px;
+    top: 60px;
+    width: 40px;
+    height: 40px;
+    background-color: #DEE7F3;
+    padding: 10px;
+    border: 3px solid #4A6FA5;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    transition: left 0.5s ease-in-out, width 0.3s, height 0.3s;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/* Ouvrir le menu */
+#sidebar:target {
+    left: 25px;
+    width: 200px;
+    height: 300px;
+}
+
+/* Liste des liens */
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+}
+
+#sidebar:target ul {
+    display: block;
+}
+
+.sidebar ul li {
+    padding: 10px 0;
+}
+
+.sidebar ul li a {
+    color: #2C4A73;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.sidebar ul li a:hover {
+    color: #5C85B6;
+}
+
+/* Bouton de fermeture */
+.close-btn {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 24px;
+    color: #2C4A73;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 /* Responsive Design pour mobile */
